--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -6,7 +6,7 @@
       "name": "preprocess data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNRkNtLZja5WDyRSM16hIeW",
+      "authorship_tag": "ABX9TyMwf/rjvf1S+OloDraB7FF/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,226 +31,276 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7ZAZ-2pLl-Ep"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QFM5RtInuuEH",
+        "outputId": "70010558-1a99-417e-a22b-3d73be471fe8"
       },
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XsqLpKunvnj-"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import json\n",
+        "import os\n",
         "import numpy as np\n",
-        "import random\n",
         "from numba import jit\n",
-        "import statistics"
+        "import random"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6_pL1o3br7Im",
-        "outputId": "350ef558-6ecb-4f44-fde3-2c3ef0c031f2"
+        "id": "i-uDL1xIvQcx"
       },
       "source": [
-        "a = [(6,989),(546,2),(456,4)]\n",
-        "b = random.choice(a)\n",
-        "print(type(b))"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'tuple'>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "InauNw99u2TB",
-        "outputId": "9b80563a-e4bd-4991-f10f-cbccb465b5a4"
-      },
-      "source": [
-        "a = np.random.randn(6,9,8)\n",
-        "b = a[:,:,np.newaxis,:]\n",
-        "b.shape"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(6, 9, 1, 8)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4KoRygsgIAN3",
-        "outputId": "4a2875ab-3702-481e-afe5-c5975971224f"
-      },
-      "source": [
-        "a = [1,6,9,8,33]\n",
-        "b = statistics.mean(a)\n",
-        "print(type(b))"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'float'>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fJTOV5LzAC1X"
-      },
-      "source": [
-        "#@jit(nopython=True)\n",
-        "def best_anchor(box,anchors):\n",
-        "  \"\"\"\n",
-        "  box -- (h,w)\n",
+        "def Kmean(bbox_hw,K=9,threshold=0.001,max_iterations=10000):\n",
         "\n",
-        "  anchor -- List [(h1,w1),(h2,w2),.....,(hk,wk)]\n",
+        "   \"\"\"\n",
+        "   bbox_hw -- (m,2) : h -> 0 , w -> 1\n",
+        "   \"\"\"\n",
         "\n",
-        "  return class\n",
-        "  \"\"\"\n",
-        "  max_iou = 0\n",
-        "  max_index = 0\n",
-        "  index = 0\n",
+        "   m = bbox_hw.shape[0]\n",
         "\n",
-        "  for anchor_hw in anchors:\n",
+        "   #sample initial center\n",
+        "   sample_list = random.sample(range(m),K)\n",
         "\n",
-        "    min_h = min(box[0],anchor_hw[0])\n",
-        "    min_w = min(box[1],anchor_hw[1])\n",
+        "   #initialize anchors (K,2)\n",
+        "   anchors = np.zeros((K,2))\n",
+        "   \n",
+        "   for idx,pos in enumerate(sample_list):\n",
         "\n",
-        "    intersection_area = min_h * min_w\n",
+        "     anchors[idx,0] = bbox_hw[pos,0]\n",
+        "     anchors[idx,1] = bbox_hw[pos,1]\n",
+        "   \n",
+        "   #calculate Kmean\n",
+        "   iteration_i = 0\n",
+        "   \n",
+        "   while iteration_i <= max_iterations:\n",
         "\n",
-        "    union_area = box[0] * box[1] + anchor_hw[0] * anchor_hw[1] - intersection_area\n",
+        "      class_collections = [[] for i in range(K)]\n",
         "\n",
-        "    cur_iou = intersection_area / (union_area + 0.000000001)\n",
+        "      #classify bbox \n",
+        "      for i in range(m):\n",
         "\n",
-        "    if cur_iou > max_iou:\n",
+        "         class_id = best_anchor(bbox_hw[i,:].reshape(1,2),anchors)\n",
         "\n",
-        "      max_iou = cur_iou\n",
+        "         class_collections[class_id].append(bbox_hw[i,:].tolist())\n",
         "\n",
-        "      max_index = index\n",
+        "      #update anchor box\n",
+        "      sum_diff = 0\n",
+        "      \n",
+        "      for i in range(K):\n",
+        "         \n",
+        "         new_h,new_w = update_anchor_x(np.array(class_collections[i]),anchors[i,:].reshape(1,2))\n",
         "\n",
-        "    index = index + 1\n",
-        "    \n",
-        "  return max_index"
-      ],
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "e0eUyASXMfOY"
-      },
-      "source": [
-        "def update_anchor_x(class_list,anchors_box):\n",
+        "         \"\"\"\n",
+        "         #sum the changes for h and w of new anchor box \n",
+        "         sum_diff = sum_diff + ((new_h-anchors[i,0])**2 + (new_w - anchors[i,1])**2)**(0.5)\n",
+        "         \"\"\"\n",
+        "         #sum the changes for h and w of new anchor box - compare iou\n",
+        "         min_h = min(new_h,anchors[i,0])\n",
+        "         min_w = min(new_w,anchors[i,1])\n",
+        "\n",
+        "         intersection = min_h * min_w\n",
+        "         union = new_h * new_w + anchors[i,0] * anchors[i,1] - intersection\n",
+        "\n",
+        "         sum_diff = sum_diff + (1 - intersection / union)\n",
+        "\n",
+        "         #update anchor box\n",
+        "         anchors[i,0] = new_h\n",
+        "         anchors[i,1] = new_w\n",
+        "\n",
+        "      if sum_diff < threshold:\n",
+        "\n",
+        "         return anchors\n",
+        "\n",
+        "   print(sum_diff)\n",
+        "   \n",
+        "   return anchors\n",
+        "         \n",
+        "\n",
+        "@jit(nopython=True)\n",
+        "def update_anchor_x(class_package,anchors_box):\n",
         "\n",
         "  \"\"\"\n",
-        "  class_list -- list[(h1,w1),(h2,w2),....]\n",
+        "  class_package -- (n,2) : h -> 0 , w -> 1\n",
+        "  anchor_box -- (1,2) : h -> 0 , w -> 1\n",
         "  \"\"\"\n",
         "\n",
         "  sum_w = 0\n",
         "  sum_h = 0\n",
         "\n",
-        "  for sample in class_list:\n",
+        "  n = class_package.shape[0]\n",
         "\n",
-        "    sum_h = sum_h + sample[0]\n",
-        "    sum_w = sum_w + sample[1]\n",
+        "  for i in range(n):\n",
         "\n",
-        "  m = len(class_list)\n",
+        "    sum_h = sum_h + class_package[i,0]\n",
+        "    sum_w = sum_w + class_package[i,1]\n",
         "\n",
-        "  if m == 0:\n",
+        "  if n == 0:\n",
         "\n",
-        "    return anchors_box[0],anchors_box[1]\n",
+        "    return anchors_box[0,0],anchors_box[0,1]\n",
         "\n",
-        "  mean_h = sum_h/m\n",
-        "  mean_w = sum_w/m\n",
+        "  mean_h = sum_h/n\n",
+        "  mean_w = sum_w/n\n",
         "\n",
-        "  return mean_h,mean_w\n"
-      ],
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JuK85sYGmNyB"
-      },
-      "source": [
-        "def K_mean(inputs,K=6,threshold=0.2,max_iterations=10000):\n",
+        "  return mean_h,mean_w\n",
         "\n",
+        "\n",
+        "@jit(nopython=True)\n",
+        "def best_anchor(box,anchors):\n",
+        "   \n",
         "  \"\"\"\n",
-        "  inputs -- list[(h1,w1),(h2,w2),....]\n",
+        "  box -- (1,2) :h -> 0 , w -> 1\n",
+        "\n",
+        "  anchors -- (K,2)\n",
+        "\n",
+        "  return class_idx\n",
         "  \"\"\"\n",
-        "  #Initialize center\n",
-        "  anchors = []\n",
+        "  \n",
+        "  max_iou = 0\n",
+        "  max_index = 0\n",
+        "\n",
+        "  K = anchors.shape[0]\n",
         "\n",
         "  for i in range(K):\n",
         "\n",
-        "    anchors.append(random.choice(inputs))\n",
+        "    min_h = np.minimum(box[0,0],anchors[i,0]).item()\n",
+        "    min_w = np.minimum(box[0,1],anchors[i,1]).item()\n",
         "\n",
-        "  iterations_i = 0\n",
+        "    intersection_area = min_h * min_w\n",
         "\n",
-        "  #Calculate K-means\n",
-        "  while iterations_i < max_iterations:\n",
+        "    union_area = box[0,0] * box[0,1] + anchors[i,0] * anchors[i,1] - intersection_area\n",
         "\n",
-        "    class_collections = [[] for i in range(K)]\n",
+        "    cur_iou = intersection_area / union_area\n",
         "\n",
-        "    for box in inputs:\n",
+        "    if cur_iou > max_iou:\n",
         "\n",
-        "      class_id = best_anchor(box,anchors)\n",
+        "      max_iou = cur_iou\n",
         "\n",
-        "      class_collections[class_id].append(box)\n",
+        "      max_index = i\n",
         "\n",
-        "    #used for checking threshold\n",
-        "    sum_diff = 0\n",
-        "\n",
-        "    #update anchors\n",
-        "    for class_idx,sample_x in enumerate(class_collections):\n",
-        "\n",
-        "        new_h,new_w = update_anchor_x(sample_x,anchors[class_idx])\n",
-        "\n",
-        "        #sum the changes for w and h of new anchor box\n",
-        "        sum_diff = sum_diff + ((new_h-anchors[class_idx][0])**2 + (new_w - anchors[class_idx][1])**2)**(0.5)\n",
-        "\n",
-        "        #update anchor box\n",
-        "        anchors[class_idx] = (new_h,new_w)\n",
-        "\n",
-        "    if sum_diff <= threshold :\n",
-        "\n",
-        "      return anchors\n",
-        "\n",
-        "  return anchors"
+        "    \n",
+        "  return max_index"
       ],
-      "execution_count": 7,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q0SMAKBcuoGn"
+      },
+      "source": [
+        "def get_class(path,path_class_map ,name=\"class_map.txt\"):\n",
+        "\n",
+        "   \"\"\"\n",
+        "   MS COCO 2017 Dataset\n",
+        "\n",
+        "   return dict\n",
+        "   \"\"\"\n",
+        "   dataset = pd.read_csv(path)\n",
+        "\n",
+        "   #get class map\n",
+        "   class_array = dataset.iloc[:,3]\n",
+        "\n",
+        "   class_map = {}\n",
+        "   idx = 0\n",
+        "   \n",
+        "   for i in range(class_array.shape[0]):\n",
+        "\n",
+        "      if not (class_array[i] in class_map.keys()):\n",
+        "\n",
+        "         class_map[class_array[i]] = idx\n",
+        "         idx = idx + 1\n",
+        "\n",
+        "   #save class map \n",
+        "   with open(f\"{path_class_map}/{name}\",\"w\") as file:\n",
+        "      \n",
+        "     file.write(json.dumps(class_map))\n",
+        "\n",
+        "   return class_map\n",
+        "\n",
+        "def get_bbox_info(path,path_pos,path_hw,name_pos=\"bbox_pos.txt\",name_hw=\"bbox_hw.txt\"):\n",
+        "\n",
+        "   \"\"\"\n",
+        "   MS COCO 2017 Dataset\n",
+        "\n",
+        "   return numpy.ndarray,bbox_hw\n",
+        "   \"\"\"\n",
+        "\n",
+        "   dataset = pd.read_csv(path)\n",
+        "\n",
+        "   \"\"\"\n",
+        "   #find center\n",
+        "   dataset[\"center_x\"] = (dataset[\"xmax\"] + dataset[\"xmin\"])/2\n",
+        "   dataset[\"center_y\"] = (dataset[\"ymax\"] + dataset[\"ymin\"])/2\n",
+        "   \"\"\"\n",
+        "\n",
+        "   #get positional data\n",
+        "   bbox_pos = dataset.iloc[:,4:].to_numpy()\n",
+        "\n",
+        "   #save bbox_pos\n",
+        "   with open(f\"{path_pos}/{name_pos}\",\"w\") as file:\n",
+        "\n",
+        "      file.write(json.dumps(bbox_pos.tolist()))\n",
+        "\n",
+        "   #construct bbox_wh (m,2) : h -> 0 , w -> 1\n",
+        "   m = bbox_pos.shape[0]\n",
+        "   bbox_hw = np.zeros((m,2))\n",
+        "\n",
+        "   for i in range(m):\n",
+        "\n",
+        "      bbox_hw[i,0] = bbox_pos[i,3] - bbox_pos[i,1]\n",
+        "      bbox_hw[i,1] = bbox_pos[i,2] - bbox_pos[i,0]\n",
+        "\n",
+        "\n",
+        "   #save bbox_hw \n",
+        "   with open(f\"{path_hw}/{name_hw}\",\"w\") as file:\n",
+        "\n",
+        "      file.write(json.dumps(bbox_hw.tolist()))\n",
+        "\n",
+        "\n",
+        "   return bbox_pos,bbox_hw\n",
+        "\n",
+        "\n",
+        "def get_pre_define_anchor_box(bbox_hw,save_path,name=\"anchors.txt\"):\n",
+        "\n",
+        "   \"\"\"\n",
+        "   bbox_hw -- numpy.ndarray (m,2)\n",
+        "   \"\"\"\n",
+        "\n",
+        "   anchors = Kmean(bbox_hw)\n",
+        "\n",
+        "   with open(f\"{save_path}/{name}\",\"w\") as file:\n",
+        "\n",
+        "      file.write(json.dumps(anchors.tolist()))\n",
+        "\n",
+        "   \n",
+        "   return anchors"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,64 +309,52 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1gAJpu02RbQ8",
-        "outputId": "6b2301e1-9060-4bb3-877b-39ed81014910"
+        "id": "cdYLg5dOvy6r",
+        "outputId": "5f660f06-ea5d-4793-d1cf-a1149ea0707d"
       },
       "source": [
-        "a = [(i,j) for i,j in enumerate(range(100))]\n",
-        "K_mean(a)"
+        "print(os.getcwd())"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(33.05555555555556, 33.05555555555556),\n",
-              " (21.0, 21.0),\n",
-              " (3.5, 3.5),\n",
-              " (56.0, 56.0),\n",
-              " (84.0, 84.0),\n",
-              " (11.0, 11.0)]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eBy16mSFUulw",
-        "outputId": "ea28c3aa-d231-4097-d202-6321ae9fa426"
-      },
-      "source": [
-        "from sklearn.cluster import KMeans\n",
-        "\n",
-        "res = KMeans(n_clusters=6)\n",
-        "res.fit(a)\n",
-        "\n",
-        "label = res.predict(a)\n",
-        "print(label)"
-      ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 5 5 5 5 5\n",
-            " 5 5 5 5 5 5 5 5 5 5 5 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 1 1 1 1 1 1 1 1 1\n",
-            " 1 1 1 1 1 1 1 1 1 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3]\n"
+            "/content\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dSqN6UI8upsQ"
+      },
+      "source": [
+        "#class map\n",
+        "class_map = get_class(\"/content/gdrive/MyDrive/valid_set.csv\",\"/content/gdrive/MyDrive\")\n",
+        "\n",
+        "file = open(\"/content/gdrive/MyDrive/class_map.txt\")\n",
+        "a = json.load(file)\n",
+        "\n",
+        "file.close()\n",
+        "\n",
+        "#bbox\n",
+        "bbox_pos,bbox_hw = get_bbox_info(\"/content/gdrive/MyDrive/valid_set.csv\",\"/content/gdrive/MyDrive\",\"/content/gdrive/MyDrive\")\n",
+        "\n",
+        "file = open(\"/content/gdrive/MyDrive/bbox_pos.txt\")\n",
+        "b = json.load(file)\n",
+        "\n",
+        "file = open(\"/content/gdrive/MyDrive/bbox_hw.txt\")\n",
+        "c = json.load(file)\n",
+        "\n",
+        "file.close()\n",
+        "\n",
+        "anchors = get_pre_define_anchor_box(bbox_hw,\"/content/gdrive/MyDrive\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
