--- a/tensorflow_dev.ipynb
+++ b/tensorflow_dev.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow_dev.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMVP22qw2ap8N6bL7Ry6egx",
+      "authorship_tag": "ABX9TyOvtcxozyvEb62A/5KT93V1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras.utils import plot_model"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -898,6 +898,37 @@
             "tags": []
           },
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oe4ap0AYbHO0",
+        "outputId": "3c1d6b55-7a13-4105-ec9c-b066b8eba409"
+      },
+      "source": [
+        "k1 = tf.keras.Input(shape=(13,13,255))\n",
+        "k2 = tf.keras.layers.Conv2D(16,3,2)(k1)\n",
+        "\n",
+        "k2[0,3:,:8,5:]"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<KerasTensor: shape=(3, 6, 11) dtype=float32 (created by layer 'tf.__operators__.getitem_8')>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     }
