--- a/tensorflow_dev.ipynb
+++ b/tensorflow_dev.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow_dev.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOvtcxozyvEb62A/5KT93V1",
+      "authorship_tag": "ABX9TyN1rgUzz1XZreV9KJpXv7On",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,10 +35,61 @@
       },
       "source": [
         "import tensorflow as tf\n",
+        "import numpy as np\n",
         "from tensorflow.keras.utils import plot_model"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G7CR7nDcHObk",
+        "outputId": "4ff82d8f-7bb2-4da2-b882-a04e8c13631a"
+      },
+      "source": [
+        "x = tf.constant(value=np.arange(1,5).reshape(1,2,2,1))\n",
+        "y = tf.keras.layers.UpSampling2D(size=(2, 2),interpolation=\"bilinear\")(x)\n",
+        "print(y[0,:,:,0])\n",
+        "print(y)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(\n",
+            "[[1.   1.25 1.75 2.  ]\n",
+            " [1.5  1.75 2.25 2.5 ]\n",
+            " [2.5  2.75 3.25 3.5 ]\n",
+            " [3.   3.25 3.75 4.  ]], shape=(4, 4), dtype=float32)\n",
+            "tf.Tensor(\n",
+            "[[[[1.  ]\n",
+            "   [1.25]\n",
+            "   [1.75]\n",
+            "   [2.  ]]\n",
+            "\n",
+            "  [[1.5 ]\n",
+            "   [1.75]\n",
+            "   [2.25]\n",
+            "   [2.5 ]]\n",
+            "\n",
+            "  [[2.5 ]\n",
+            "   [2.75]\n",
+            "   [3.25]\n",
+            "   [3.5 ]]\n",
+            "\n",
+            "  [[3.  ]\n",
+            "   [3.25]\n",
+            "   [3.75]\n",
+            "   [4.  ]]]], shape=(1, 4, 4, 1), dtype=float32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -916,7 +967,7 @@
         "\n",
         "k2[0,3:,:8,5:]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
