--- a/start.ipynb
+++ b/start.ipynb
@@ -2,20 +2,21 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "name": "start.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEk6KaWFx8fvti2G2jsQFv",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPzUqL7c3zX7PZPdL++gQBp",
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -35,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YRE50iEku0BT",
-        "outputId": "ec19d315-4f23-4b3c-be37-85577d351152"
+        "outputId": "2ab2fb58-c7bd-429c-fc8d-9bcb131da1ae"
       },
       "source": [
         "from google.colab import drive\n",
@@ -100,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "12q0tZuBpIR1",
-        "outputId": "f046b7ec-1652-4e78-d5b0-a50276347858"
+        "outputId": "7a05b133-b336-4ac2-a2c0-451934e1d3b4"
       },
       "source": [
         "for i in foo(3):\n",
@@ -1420,7 +1421,7 @@
           "height": 1000
         },
         "id": "usga9mVHpXf4",
-        "outputId": "a9141fbd-5793-4aa5-c0d4-7bcb5553b4dc"
+        "outputId": "6ee4a08b-e726-4d82-dd38-bf550105e53d"
       },
       "source": [
         "initializer = tf.random_normal_initializer()\n",
@@ -1563,10 +1564,10 @@
         "    reg_loss = K.sum(loss_tensor)\n",
         "\n",
         "    #****************** DIOU loss ******************\n",
-        "    #tf.print(reg_loss)\n",
+        " \n",
         "    #calculate loss\n",
         "    loss = prob_focal_loss + class_focal_loss + 5 * reg_loss\n",
-        "    #tf.print(loss)\n",
+        " \n",
         "    return loss"
       ],
       "execution_count": 14,
@@ -1996,6 +1997,8 @@
         "      #calibrate image\n",
         "      img = preprocess_image(img,img_shape)\n",
         "\n",
+        "      #img = cv2.resize(img,(128,128))\n",
+        "\n",
         "      #save img\n",
         "      img_data.append(img)\n",
         "\n",
@@ -2203,7 +2206,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YZiRB-rLim8u",
-        "outputId": "f6921362-dad2-42d8-f7a1-caeb7316379d"
+        "outputId": "e28fdeb9-503f-47a7-86fe-1760e665792e"
       },
       "source": [
         "#step function\n",
@@ -2258,18 +2261,19 @@
         "      #total loss\n",
         "      total_loss = large_obj_loss + medium_obj_loss + small_obj_loss\n",
         "\n",
-        "      return total_loss\n",
+        "      return total_loss \n",
         "\n",
         "   #define optimizer\n",
         "   optimizer = tf.keras.optimizers.Adam()\n",
         "\n",
         "   #define model\n",
-        "   model = alpha_model()\n",
+        "   #model = alpha_model()\n",
+        "   model = tf.keras.models.load_model(f\"{cur_path}/gdrive/MyDrive/model\")\n",
         "   \n",
         "\n",
         "batch_size_per_replica = 4\n",
         "\n",
-        "EPOCHS = 10\n",
+        "EPOCHS = 100\n",
         "\n",
         "#preprocessing class\n",
         "input_path = f\"{cur_path}/gdrive/MyDrive/annotations/train_annotations.csv\"\n",
@@ -2320,8 +2324,10 @@
         "      #Do training\n",
         "      for batch in train_dist_dataset:\n",
         "\n",
-        "         total_loss = total_loss + distributed_train_step(batch)\n",
-        "\n",
+        "         total_loss = total_loss + distributed_train_step(batch) \n",
+        "   \n",
+        "   total_loss = total_loss \n",
+        "   \n",
         "   print(f\"Epoch {i+1} , Loss: {total_loss}\")"
       ],
       "execution_count": null,
@@ -2330,11 +2336,56 @@
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:Collective ops is not configured at program startup. Some performance features may not be enabled.\n",
-            "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:CPU:0',)\n"
+            "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0',)\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+            "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n",
+            "Epoch 1 , Loss: 87080537423872.0\n",
+            "Epoch 2 , Loss: 40728908.0\n",
+            "Epoch 3 , Loss: 40305020.0\n",
+            "Epoch 4 , Loss: 6840225628160.0\n",
+            "Epoch 5 , Loss: 58456532.0\n",
+            "Epoch 6 , Loss: 58168532.0\n",
+            "Epoch 7 , Loss: 58208480.0\n",
+            "Epoch 8 , Loss: 53827568.0\n",
+            "Epoch 9 , Loss: 51799344.0\n",
+            "Epoch 10 , Loss: 51098000.0\n",
+            "Epoch 11 , Loss: 50355640.0\n",
+            "Epoch 12 , Loss: 49148772.0\n",
+            "Epoch 13 , Loss: 48396680.0\n",
+            "Epoch 14 , Loss: 48125160.0\n",
+            "Epoch 15 , Loss: 47635680.0\n",
+            "Epoch 16 , Loss: 47508492.0\n",
+            "Epoch 17 , Loss: 47795488.0\n",
+            "Epoch 18 , Loss: 47543320.0\n",
+            "Epoch 19 , Loss: 47419224.0\n",
+            "Epoch 20 , Loss: 47129484.0\n",
+            "Epoch 21 , Loss: 47970904.0\n",
+            "Epoch 22 , Loss: 47378864.0\n",
+            "Epoch 23 , Loss: 47407572.0\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdWqOutS8rbr"
+      },
+      "source": [
+        "tf.keras.models.save_model(model,f\"{cur_path}/gdrive/MyDrive/model\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
