--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPyv6bNGA17WE3VR8z2S4uJ",
+      "authorship_tag": "ABX9TyMR4JYe+XIX/yz1MZ1G90vj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,8 +38,8 @@
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.flush_and_unmount()\n",
-        "#drive.mount(\"/content/gdrive\")"
+        "#drive.flush_and_unmount()\n",
+        "drive.mount(\"/content/gdrive\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -1468,6 +1468,9 @@
         "\n",
         "  def call(self,y_true,y_pred):\n",
         "\n",
+        "    #get object mask\n",
+        "    object_mask = K.cast(y_true[:,:,:,0],K.dtype(y_pred))\n",
+        "\n",
         "    #get prob\n",
         "    prob_true = y_true[:,:,:,0]\n",
         "    prob_pred = y_pred[:,:,:,0]\n",
@@ -1490,11 +1493,11 @@
         "    #class_pred = K.clip(class_pred,min_value = 0.0, max_value = 1.0)\n",
         "\n",
         "    #prob focal loss\n",
-        "    loss_tensor =  - ( (1 - prob_pred)**self.gamma ) * prob_true * tf.math.log( prob_pred + 1e-18 ) - ( prob_pred ** self.gamma ) * ( 1 - prob_true ) * tf.math.log( 1 - prob_pred + 1e-18 )\n",
+        "    loss_tensor =  - ( (1 - prob_pred)**self.gamma ) * prob_true * tf.math.log( prob_pred + 1e-18 ) - ( prob_pred ** self.gamma ) * ( 1 - prob_true ) * tf.math.log( 1 - prob_pred + 1e-18 )*0.75\n",
         "    prob_focal_loss = K.sum(loss_tensor)/ m\n",
         "\n",
         "    #class focal loss\n",
-        "    loss_tensor =  - ( (1 - class_pred)**self.gamma ) * class_true * tf.math.log( class_pred + 1e-18 ) - ( class_pred ** self.gamma) * ( 1 - class_true ) * tf.math.log( 1 - class_pred + 1e-18 )\n",
+        "    loss_tensor =  - ( (1 - class_pred)**self.gamma ) * class_true * tf.math.log( class_pred + 1e-18 ) - ( class_pred ** self.gamma) * ( 1 - class_true ) * tf.math.log( 1 - class_pred + 1e-18 ) * 0.1\n",
         "    class_focal_loss = K.sum(loss_tensor) / m\n",
         "\n",
         "\n",
@@ -1506,11 +1509,17 @@
         "\n",
         "    reg_left_true = K.cast(reg_left_true,K.dtype(reg_left_pred))\n",
         "\n",
+        "    #mask the reg (because we consider the box with object only )\n",
+        "    reg_left_pred = reg_left_pred[:,:,:,:] * object_mask[:,:,:,tf.newaxis]\n",
+        "\n",
         "    #get reg center -- (x,y)\n",
         "    reg_center_true = y_true[:,:,:,3:5] \n",
         "    reg_center_pred = y_pred[:,:,:,3:5]\n",
         "\n",
         "    reg_center_true = K.cast(reg_center_true,K.dtype(reg_center_pred))\n",
+        "\n",
+        "    #mask the reg (because we consider the box with object only )\n",
+        "    reg_center_pred = reg_center_pred[:,:,:,:] * object_mask[:,:,:,tf.newaxis]\n",
         "\n",
         "    #calculate width x height of anchor box\n",
         "    reg_wh_true = (reg_center_true[:,:,:,:] - reg_left_true[:,:,:,:])*2\n",
@@ -2292,7 +2301,7 @@
         "\n",
         "batch_size_per_replica = 4\n",
         "\n",
-        "EPOCHS = 20\n",
+        "EPOCHS = 100\n",
         "\n",
         "#preprocessing class\n",
         "input_path = f\"{cur_path}/gdrive/MyDrive/annotations/train_annotations.csv\"\n",
