--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMR4JYe+XIX/yz1MZ1G90vj",
+      "authorship_tag": "ABX9TyNojQUXgoh4CSUkoUVenX/p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1493,11 +1493,11 @@
         "    #class_pred = K.clip(class_pred,min_value = 0.0, max_value = 1.0)\n",
         "\n",
         "    #prob focal loss\n",
-        "    loss_tensor =  - ( (1 - prob_pred)**self.gamma ) * prob_true * tf.math.log( prob_pred + 1e-18 ) - ( prob_pred ** self.gamma ) * ( 1 - prob_true ) * tf.math.log( 1 - prob_pred + 1e-18 )*0.75\n",
+        "    loss_tensor =  - ( (1 - prob_pred)**self.gamma ) * prob_true * tf.math.log( prob_pred + 1e-18 ) - ( prob_pred ** self.gamma ) * ( 1 - prob_true ) * tf.math.log( 1 - prob_pred + 1e-18 ) \n",
         "    prob_focal_loss = K.sum(loss_tensor)/ m\n",
         "\n",
         "    #class focal loss\n",
-        "    loss_tensor =  - ( (1 - class_pred)**self.gamma ) * class_true * tf.math.log( class_pred + 1e-18 ) - ( class_pred ** self.gamma) * ( 1 - class_true ) * tf.math.log( 1 - class_pred + 1e-18 ) * 0.1\n",
+        "    loss_tensor =  - ( (1 - class_pred)**self.gamma ) * class_true * tf.math.log( class_pred + 1e-18 ) - ( class_pred ** self.gamma) * ( 1 - class_true ) * tf.math.log( 1 - class_pred + 1e-18 ) \n",
         "    class_focal_loss = K.sum(loss_tensor) / m\n",
         "\n",
         "\n",
@@ -1578,7 +1578,7 @@
         "    #****************** DIOU loss ******************\n",
         " \n",
         "    #calculate loss\n",
-        "    loss = prob_focal_loss + class_focal_loss + 5 * reg_loss\n",
+        "    loss = prob_focal_loss + class_focal_loss + 10 * reg_loss \n",
         " \n",
         "    return loss"
       ],
