--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNojQUXgoh4CSUkoUVenX/p",
+      "authorship_tag": "ABX9TyO474nSYFRERg52FcNIhSt4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1470,6 +1470,9 @@
         "\n",
         "    #get object mask\n",
         "    object_mask = K.cast(y_true[:,:,:,0],K.dtype(y_pred))\n",
+        "    \n",
+        "    reg_scale_factor = tf.math.reduce_mean(object_mask)\n",
+        "    reg_scale_factor =  reg_scale_factor / (1 - reg_scale_factor) \n",
         "\n",
         "    #get prob\n",
         "    prob_true = y_true[:,:,:,0]\n",
@@ -1510,7 +1513,7 @@
         "    reg_left_true = K.cast(reg_left_true,K.dtype(reg_left_pred))\n",
         "\n",
         "    #mask the reg (because we consider the box with object only )\n",
-        "    reg_left_pred = reg_left_pred[:,:,:,:] * object_mask[:,:,:,tf.newaxis]\n",
+        "    #reg_left_pred = reg_left_pred[:,:,:,:] * object_mask[:,:,:,tf.newaxis]\n",
         "\n",
         "    #get reg center -- (x,y)\n",
         "    reg_center_true = y_true[:,:,:,3:5] \n",
@@ -1519,7 +1522,7 @@
         "    reg_center_true = K.cast(reg_center_true,K.dtype(reg_center_pred))\n",
         "\n",
         "    #mask the reg (because we consider the box with object only )\n",
-        "    reg_center_pred = reg_center_pred[:,:,:,:] * object_mask[:,:,:,tf.newaxis]\n",
+        "    #reg_center_pred = reg_center_pred[:,:,:,:] * object_mask[:,:,:,tf.newaxis]\n",
         "\n",
         "    #calculate width x height of anchor box\n",
         "    reg_wh_true = (reg_center_true[:,:,:,:] - reg_left_true[:,:,:,:])*2\n",
@@ -1573,12 +1576,17 @@
         "\n",
         "    #calculate DIOU\n",
         "    loss_tensor = 1 - (iou_val[:,:,:] - distance_center[:,:,:]/ (distance_outermost[:,:,:] +  1e-10) )\n",
-        "    reg_loss = K.sum(loss_tensor)\n",
+        "    #reg_loss = K.sum(loss_tensor)\n",
+        "\n",
+        "    loss_tensor_pos = loss_tensor[:,:,:] * object_mask[:,:,:]\n",
+        "    loss_tensor_neg = loss_tensor[:,:,:] * (1 - object_mask[:,:,:])\n",
+        "\n",
+        "    reg_loss = K.sum(loss_tensor_pos) + K.sum(loss_tensor_neg) * reg_scale_factor\n",
         "\n",
         "    #****************** DIOU loss ******************\n",
         " \n",
         "    #calculate loss\n",
-        "    loss = prob_focal_loss + class_focal_loss + 10 * reg_loss \n",
+        "    loss = prob_focal_loss + class_focal_loss + 5 * reg_loss\n",
         " \n",
         "    return loss"
       ],
@@ -2301,7 +2309,7 @@
         "\n",
         "batch_size_per_replica = 4\n",
         "\n",
-        "EPOCHS = 100\n",
+        "EPOCHS = 25\n",
         "\n",
         "#preprocessing class\n",
         "input_path = f\"{cur_path}/gdrive/MyDrive/annotations/train_annotations.csv\"\n",
