--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNE58hV4wO39WjS+CmAvHxX",
+      "authorship_tag": "ABX9TyOA00sTEw5WTYHm4kQxLGkd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2132,7 +2132,7 @@
         "      img = cv2.imread(f\"{img_path}/{name}\")\n",
         "\n",
         "      #calibrate image\n",
-        "      img = preprocess_image(img,img_shape)\n",
+        "      img = preprocess_data.preprocess_image(img,img_shape)\n",
         "\n",
         "      #img = cv2.resize(img,(128,128))\n",
         "\n",
@@ -2163,9 +2163,13 @@
         "\n",
         "\n",
         "      #initialize y_true extra dim will be removed when it is saved (it is used for overlap region checking)\n",
-        "      obj_small_true = np.zeros((80,80,86))\n",
-        "      obj_medium_true = np.zeros((40,40,86))\n",
-        "      obj_large_true = np.zeros((20,20,86))\n",
+        "      obj_small_true = np.zeros((80,80,91))\n",
+        "      obj_medium_true = np.zeros((40,40,91))\n",
+        "      obj_large_true = np.zeros((20,20,91))\n",
+        "\n",
+        "      #obj_small_true = np.zeros((16,16,91))\n",
+        "      #obj_medium_true = np.zeros((8,8,91))\n",
+        "      #obj_large_true = np.zeros((4,4,91))\n",
         "\n",
         "      #get (obj_info -- list)\n",
         "      obj_info = img_info[name]\n",
@@ -2177,9 +2181,9 @@
         "         obj_small_true,obj_medium_true,obj_large_true = update_y_true(obj,class_info[obj[0]],obj_small_true,obj_medium_true,obj_large_true,img_shape,standard_scale)\n",
         "         \n",
         "      #save image info\n",
-        "      small_true.append(obj_small_true[:,:,:-1])\n",
-        "      medium_true.append(obj_medium_true[:,:,:-1])\n",
-        "      large_true.append(obj_large_true[:,:,:-1])\n",
+        "      small_true.append(obj_small_true[:,:,:-2])\n",
+        "      medium_true.append(obj_medium_true[:,:,:-2])\n",
+        "      large_true.append(obj_large_true[:,:,:-2])\n",
         "\n",
         "   #convert y_true to numpy array\n",
         "   small_true = np.array(small_true)\n",
@@ -2198,6 +2202,12 @@
         "\n",
         "   _,xmin,ymin,xcenter,ycenter = obj\n",
         "\n",
+        "   #avoid x,y division by zeros for ratio calculation\n",
+        "   xmin = xmin + 1e-18\n",
+        "   ymin = ymin + 1e-18\n",
+        "   xcenter = xcenter + 1e-18\n",
+        "   ycenter = ycenter + 1e-18\n",
+        "\n",
         "   width = (xcenter - xmin) * 2\n",
         "   height = (ycenter - ymin) * 2\n",
         "\n",
@@ -2206,33 +2216,47 @@
         "\n",
         "   area  = width * height\n",
         "\n",
-        "   if area < standard_scale[0]:\n",
+        "   if (area < standard_scale[0]):\n",
         "\n",
         "      step_h = obj_small_true.shape[0] / img_shape[0]\n",
         "      step_w = obj_small_true.shape[1] / img_shape[1]\n",
         "\n",
         "      h_pos = int(step_h * ycenter)\n",
-        "      w_pos = int(step_w * xcenter) \n",
+        "      w_pos = int(step_w * xcenter)\n",
+        "\n",
+        "      if (obj_small_true[h_pos,w_pos,-2] < 2) :\n",
         "      \n",
-        "      #prob\n",
-        "      obj_small_true[h_pos,w_pos,0] = 1\n",
+        "         #prob\n",
+        "         obj_small_true[h_pos,w_pos,0] = 1\n",
         "\n",
-        "      #xmin,ymin\n",
-        "      obj_small_true[h_pos,w_pos,1] = xmin\n",
-        "      obj_small_true[h_pos,w_pos,2] = ymin\n",
+        "         #xmin,ymin\n",
+        "         obj_small_true[h_pos,w_pos,1] = xmin + obj_small_true[h_pos,w_pos,1]\n",
+        "         obj_small_true[h_pos,w_pos,2] = ymin + obj_small_true[h_pos,w_pos,2]\n",
         "\n",
-        "      #xcenter,ycenter\n",
-        "      obj_small_true[h_pos,w_pos,3] = xcenter\n",
-        "      obj_small_true[h_pos,w_pos,4] = ycenter\n",
+        "         #xmin ymin ratio\n",
+        "         obj_small_true[h_pos,w_pos,5] = xmin / obj_small_true[h_pos,w_pos,1]\n",
+        "         obj_small_true[h_pos,w_pos,6] = ymin / obj_small_true[h_pos,w_pos,2]\n",
         "\n",
-        "      #class\n",
-        "      obj_small_true[h_pos,w_pos,5+class_id] = 1\n",
+        "         #xcenter,ycenter\n",
+        "         obj_small_true[h_pos,w_pos,3] = xcenter + obj_small_true[h_pos,w_pos,3]\n",
+        "         obj_small_true[h_pos,w_pos,4] = ycenter + obj_small_true[h_pos,w_pos,4]\n",
         "\n",
-        "      #label occupied cells\n",
-        "      obj_small_true[h_pos,w_pos,-1] = 1\n",
+        "         #xcenter ycenter ratio\n",
+        "         obj_small_true[h_pos,w_pos,7] = xcenter / obj_small_true[h_pos,w_pos,3]\n",
+        "         obj_small_true[h_pos,w_pos,8] = ycenter / obj_small_true[h_pos,w_pos,4]\n",
         "\n",
-        "      #multiple positive\n",
-        "      obj_small_true = multiple_positive_labeling(obj_small_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "         #class\n",
+        "         obj_small_true[h_pos,w_pos,9+class_id] = 1\n",
+        "\n",
+        "         #label center\n",
+        "         obj_small_true[h_pos,w_pos,-2] = obj_small_true[h_pos,w_pos,-2] + 1 \n",
+        "\n",
+        "         #label occupied cells\n",
+        "         obj_small_true[h_pos,w_pos,-1] = obj_small_true[h_pos,w_pos,-1] + 1\n",
+        "\n",
+        "         #multiple positive\n",
+        "         obj_small_true = multiple_positive_labeling(obj_small_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "         \n",
         "\n",
         "   elif (area > standard_scale[0]) and (area < standard_scale[1]):\n",
         "\n",
@@ -2241,26 +2265,40 @@
         "\n",
         "      h_pos = int(step_h * ycenter)\n",
         "      w_pos = int(step_w * xcenter) \n",
-        "      \n",
-        "      #prob\n",
-        "      obj_medium_true[h_pos,w_pos,0] = 1\n",
         "\n",
-        "      #xmin,ymin\n",
-        "      obj_medium_true[h_pos,w_pos,1] = xmin\n",
-        "      obj_medium_true[h_pos,w_pos,2] = ymin\n",
+        "      if (obj_medium_true[h_pos,w_pos,-2] < 2):\n",
+        "         \n",
+        "         #prob\n",
+        "         obj_medium_true[h_pos,w_pos,0] = 1\n",
         "\n",
-        "      #xcenter,ycenter\n",
-        "      obj_medium_true[h_pos,w_pos,3] = xcenter\n",
-        "      obj_medium_true[h_pos,w_pos,4] = ycenter\n",
+        "         #xmin,ymin\n",
+        "         obj_medium_true[h_pos,w_pos,1] = xmin + obj_medium_true[h_pos,w_pos,1]\n",
+        "         obj_medium_true[h_pos,w_pos,2] = ymin + obj_medium_true[h_pos,w_pos,2]\n",
         "\n",
-        "      #class\n",
-        "      obj_medium_true[h_pos,w_pos,5+class_id] = 1\n",
+        "         #xmin ymin ratio\n",
+        "         obj_medium_true[h_pos,w_pos,5] = xmin / obj_medium_true[h_pos,w_pos,1]\n",
+        "         obj_medium_true[h_pos,w_pos,6] = ymin / obj_medium_true[h_pos,w_pos,2]\n",
         "\n",
-        "      #label occupied cells\n",
-        "      obj_medium_true[h_pos,w_pos,-1] = 1\n",
+        "         #xcenter,ycenter\n",
+        "         obj_medium_true[h_pos,w_pos,3] = xcenter + obj_medium_true[h_pos,w_pos,3]\n",
+        "         obj_medium_true[h_pos,w_pos,4] = ycenter + obj_medium_true[h_pos,w_pos,4]\n",
         "\n",
-        "      #multiple positive\n",
-        "      obj_medium_true = multiple_positive_labeling(obj_medium_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "         #xcenter,ycenter ratio\n",
+        "         obj_medium_true[h_pos,w_pos,7] = xcenter / obj_medium_true[h_pos,w_pos,3]\n",
+        "         obj_medium_true[h_pos,w_pos,8] = ycenter / obj_medium_true[h_pos,w_pos,4]\n",
+        "\n",
+        "         #class\n",
+        "         obj_medium_true[h_pos,w_pos,9+class_id] = 1\n",
+        "\n",
+        "         #label center\n",
+        "         obj_medium_true[h_pos,w_pos,-2] = obj_medium_true[h_pos,w_pos,-2] + 1 \n",
+        "\n",
+        "         #label occupied cells\n",
+        "         obj_medium_true[h_pos,w_pos,-1] = obj_medium_true[h_pos,w_pos,-1] + 1\n",
+        "\n",
+        "         #multiple positive\n",
+        "         obj_medium_true = multiple_positive_labeling(obj_medium_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "         \n",
         "\n",
         "   elif (area > standard_scale[1]) :\n",
         "\n",
@@ -2268,27 +2306,41 @@
         "      step_w = obj_large_true.shape[1] / img_shape[1]\n",
         "\n",
         "      h_pos = int(step_h * ycenter)\n",
-        "      w_pos = int(step_w * xcenter) \n",
+        "      w_pos = int(step_w * xcenter)\n",
+        "\n",
+        "      if (obj_large_true[h_pos,w_pos,-2] < 2) :\n",
         "      \n",
-        "      #prob\n",
-        "      obj_large_true[h_pos,w_pos,0] = 1\n",
+        "         #prob\n",
+        "         obj_large_true[h_pos,w_pos,0] = 1\n",
         "\n",
-        "      #xmin,ymin\n",
-        "      obj_large_true[h_pos,w_pos,1] = xmin\n",
-        "      obj_large_true[h_pos,w_pos,2] = ymin\n",
+        "         #xmin,ymin\n",
+        "         obj_large_true[h_pos,w_pos,1] = xmin + obj_large_true[h_pos,w_pos,1]\n",
+        "         obj_large_true[h_pos,w_pos,2] = ymin + obj_large_true[h_pos,w_pos,2]\n",
         "\n",
-        "      #xcenter,ycenter\n",
-        "      obj_large_true[h_pos,w_pos,3] = xcenter\n",
-        "      obj_large_true[h_pos,w_pos,4] = ycenter\n",
+        "         #xmin ymin ratio\n",
+        "         obj_large_true[h_pos,w_pos,5] = xmin / obj_large_true[h_pos,w_pos,1]\n",
+        "         obj_large_true[h_pos,w_pos,6] = ymin / obj_large_true[h_pos,w_pos,2]\n",
         "\n",
-        "      #class\n",
-        "      obj_large_true[h_pos,w_pos,5+class_id] = 1\n",
+        "         #xcenter,ycenter\n",
+        "         obj_large_true[h_pos,w_pos,3] = xcenter + obj_large_true[h_pos,w_pos,3]\n",
+        "         obj_large_true[h_pos,w_pos,4] = ycenter + obj_large_true[h_pos,w_pos,4]\n",
         "\n",
-        "      #label occupied cells\n",
-        "      obj_large_true[h_pos,w_pos,-1] = 1\n",
+        "         #xcenter,ycenter ratio\n",
+        "         obj_large_true[h_pos,w_pos,7] = xcenter / obj_large_true[h_pos,w_pos,3]\n",
+        "         obj_large_true[h_pos,w_pos,8] = ycenter / obj_large_true[h_pos,w_pos,4]\n",
         "\n",
-        "      #multiple positive\n",
-        "      obj_large_true = multiple_positive_labeling(obj_large_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "         #class\n",
+        "         obj_large_true[h_pos,w_pos,9+class_id] = 1\n",
+        "\n",
+        "         #label center\n",
+        "         obj_large_true[h_pos,w_pos,-2] = obj_large_true[h_pos,w_pos,-2] + 1\n",
+        "\n",
+        "         #label occupied cells\n",
+        "         obj_large_true[h_pos,w_pos,-1] = obj_large_true[h_pos,w_pos,-1] + 1\n",
+        "\n",
+        "         #multiple positive\n",
+        "         obj_large_true = multiple_positive_labeling(obj_large_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "         \n",
         "\n",
         "   return obj_small_true,obj_medium_true,obj_large_true\n",
         "\n",
@@ -2310,28 +2362,35 @@
         "\n",
         "      for h_pos in range(h_pos_init,h_max):\n",
         "\n",
-        "         if y_true[h_pos,w_pos,-1] == 0:\n",
+        "         if (y_true[h_pos,w_pos,-2] == 0) and (y_true[h_pos,w_pos,-1] < 2):\n",
         "\n",
         "            #prob\n",
         "            y_true[h_pos,w_pos,0] = 1\n",
         "\n",
         "            #xmin,ymin\n",
-        "            y_true[h_pos,w_pos,1] = xmin\n",
-        "            y_true[h_pos,w_pos,2] = ymin\n",
+        "            y_true[h_pos,w_pos,1] = xmin + y_true[h_pos,w_pos,1] \n",
+        "            y_true[h_pos,w_pos,2] = ymin + y_true[h_pos,w_pos,2]\n",
+        "\n",
+        "            #xmin,ymin ratio\n",
+        "            y_true[h_pos,w_pos,5] = xmin / y_true[h_pos,w_pos,1] \n",
+        "            y_true[h_pos,w_pos,6] = ymin / y_true[h_pos,w_pos,2]\n",
         "\n",
         "            #xcenter,ycenter\n",
-        "            y_true[h_pos,w_pos,3] = xcenter\n",
-        "            y_true[h_pos,w_pos,4] = ycenter\n",
+        "            y_true[h_pos,w_pos,3] = xcenter + y_true[h_pos,w_pos,3]\n",
+        "            y_true[h_pos,w_pos,4] = ycenter + y_true[h_pos,w_pos,4]\n",
+        "\n",
+        "            #xcenter,ycenter ratio\n",
+        "            y_true[h_pos,w_pos,7] = xcenter / y_true[h_pos,w_pos,3]\n",
+        "            y_true[h_pos,w_pos,8] = ycenter / y_true[h_pos,w_pos,4]\n",
         "\n",
         "            #class\n",
-        "            y_true[h_pos,w_pos,5+class_id] = 1\n",
+        "            y_true[h_pos,w_pos,9+class_id] = 1\n",
         "\n",
         "            #label occupied cells\n",
-        "            y_true[h_pos,w_pos,-1] = 1\n",
+        "            y_true[h_pos,w_pos,-1] = y_true[h_pos,w_pos,-1] + 1\n",
         "\n",
         "\n",
-        "   return y_true \n",
-        "\n"
+        "   return y_true  "
       ],
       "execution_count": null,
       "outputs": []
